--- a/templates/login-mobile.html
+++ b/templates/login-mobile.html
@@ -19,7 +19,7 @@
                 <input style="margin-left: 5%; width: 70%; height: 50px; font-size: 40px"  class="mainForm" type=password name=password placeholder="Password">
                 <br>
                 <hr style="margin-left: 5%; margin-right:35%">
-                <input class="buttonGray" style="margin-left: 5%; width: 50%; font-size: 50px; height: 100px" type=submit value="Login">
+                <input class="buttonGray" style="margin-left: 5%; width: 50%; font-size: 50px; height: 100px; -webkit-appearance: none" type=submit value="Login">
                 <br>
                 <div style="margin-left: 5%; margin-top: 5%; font-size: 50px">Do not have an account? <a href="/register" class="navbarElement">Register</a></div>
                 <br>
