--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
             <hr style="margin-left: 5%; margin-right:35%">
             <input style="margin-left: 5%; margin-right:35%; width: 60%"  class="mainForm" type=password name=password placeholder="Password">
             <hr style="margin-left: 5%; margin-right:35%">
-            <input class="buttonGray" style="margin-left: 5%; width: 50%" type=submit value="Login">
+            <input class="buttonGray" style="margin-left: 5%; width: 50%;" type=submit value="Login">
             <br>
             <div style="margin-left: 5%; margin-top: 5%">Do not have an account? <a href="/register" class="navbarElement">Register</a></div>
             <br>
