--- a/templates/register_mobile.html
+++ b/templates/register_mobile.html
@@ -30,7 +30,7 @@
                 </select>
                 <hr style="margin-left: 5%; margin-right:35%">
                 <br>
-                <input class="buttonGray" style="margin-left: 5%; width: 50%; font-size: 50px" type="button" onclick="validator()" value="Register">
+                <input class="buttonGray" style="margin-left: 5%; width: 50%; font-size: 50px; -webkit-appearance: none" type="button" onclick="validator()" value="Register">
                 <div style="margin-left: 5%; margin-top: 5%; font-size: 50px; height: 100px">Already have an account? <a href="/login" class="navbarElement">Login</a></div>
                 <br>
             </div>
