--- a/templates/register_mobile.html
+++ b/templates/register_mobile.html
@@ -23,7 +23,7 @@
                 <input style="margin-left: 5%; width: 70%; height: 50px; font-size: 40px"  class="mainForm" type=password id="passAgain" name=password placeholder="Password Again" required>
                 <hr style="margin-left: 5%; margin-right:35%">
                 <br>
-                <select style="margin-left: 5%; width: 70%; height: 50px; font-size: 40px" name="purpose" class="mainForm" id="rgstr" required>
+                <select style="margin-left: 5%; width: 70%; height: 50px; font-size: 40px; -webkit-appearance: none;" name="purpose" class="mainForm" id="rgstr" required>
                     <option value="Advertiser">Your Purpose</option>
                     <option value="Content Creator">Content Creator</option>
                     <option value="Advertiser">Advertiser</option>
