--- a/templates/estimated_earnings.html
+++ b/templates/estimated_earnings.html
@@ -28,7 +28,7 @@
     <script>
         function calculate(){
             var revestimate = document.getElementById("monthlyvis").value * 0.00003 * 32
-            var revestimate2 = 0
+            var revestimate2 = -1 * (revestimate * 0,2)
             var frev = parseFloat((revestimate + revestimate2) * 3 * 12)
             document.getElementById("outcome").innerHTML = frev.toFixed(2)  + " $ annually";
         }
