--- a/templates/login.html
+++ b/templates/login.html
@@ -6,11 +6,11 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/styles">
 </head>
-<body style="font-family: open sans; width: 100%; height: 100%; background: linear-gradient(90deg, rgb(250, 150, 150) 0%, rgb(0, 200, 220) 60%); padding: 0; margin: 0; outline: 0; border: 0">
+<body style="font-family: open sans; width: 100%; height: 100%; background: linear-gradient(90deg, white 0%, rgb(0, 200, 220) 60%); padding: 0; margin: 0; outline: 0; border: 0">
 
     <img style="float: left; margin: 0px; padding: 0px; outline: 0px; border: 0px; height: 250px; width: 250px; margin-top: 30vh; margin-left: 15%" src="/logos/loginBG.png" alt="">
     <div style="margin-top: 0">
-        <form method=post enctype=multipart/form-data style="margin-top: 38vh; background-color: white; width: 30%; float: right; margin-right: 12%; border-radius: 5px; border: solid gray 1px">
+        <form method=post enctype=multipart/form-data style="margin-top: 38vh; background-color: white; width: 30%; float: right; margin-right: 12%; border-radius: 5px; border: none">
             <br>
             <input style="margin-left: 5%; margin-right:35%; width: 60%" class="mainForm" type=text name=email placeholder="Email">
             <hr style="margin-left: 5%; margin-right:35%">
