--- a/templates/status.html
+++ b/templates/status.html
@@ -34,8 +34,7 @@
     <div style="float: left; width: 75%; margin-left: 24%">
         <h2>InAds Global Network Status</h2>
         <h3>Server Running: <span style="color: green">&check;</span></h3>
-        <h3>Website Updated: <span style="color: green">&check;</span></h3>
-        <h3>Adequate number of ads are online: <span style="color: green">&check;</span></h3>
+        <h3>Website Version: v84 Release</h3>
         <h3>Client Website Connections: <span style="color: green">&check;</span></h3>
         <h3>Dashboard: <span style="color: green">&check;</span></h3>
         <h3>Database Connections: <span style="color: green">&check;</span></h3>
