--- a/templates/index.html
+++ b/templates/index.html
@@ -128,11 +128,11 @@
     <br style="clear: both">
 
 
-    <center style="background-color: rgb(230, 230, 235); height: 40%; margin-top: 15%">
+    <center style="background: linear-gradient(to right, white 0%, rgb(0, 200, 220) 80%); height: 40%; margin-top: 15%; color: white">
         <p style="opacity: 0">InAds</p>
         <h4 style="margin-top: 3%">SKYROCKET YOUR INCOME</h4>
         <h1 style="margin-top: 3%">Calculate your estimated income</h1>
-        <button class="buttonGray" onclick="document.location = '/estimated_earnings'">Calculate</button>
+        <button class="buttonBlue" onclick="document.location = '/estimated_earnings'">Calculate</button>
         <p style="opacity: 0; margin-top: 3%">InAds</p>
     </center>
     <div>
