--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -140,7 +140,7 @@
     <center style="background: linear-gradient(to right, white 0%, rgb(0, 200, 220) 80%); height: 40%; margin-top: 15%; color: white">
         <p style="opacity: 0">InAds</p>
         <h4 style="margin-top: 3%">SKYROCKET YOUR INCOME</h4>
-        <h1 style="margin-top: 3%">Calculate your estimated income</h1>
+        <h1 style="margin-top: 3%; color: white">Calculate your estimated income</h1>
         <button class="buttonBlue" onclick="document.location = '/estimated_earnings'">Calculate</button>
         <p style="opacity: 0; margin-top: 3%">InAds</p>
     </center>
