--- a/templates/docs.html
+++ b/templates/docs.html
@@ -96,7 +96,7 @@
             <a class="navbarElement" href="/docs"><small>Docs</small></a>
             <a class="navbarElement" style="float: right; margin-right: 5%" id="langelement" onclick="InAdsLanguage()">TR</a>
         </div>
-        <div style="width: 100%; color: gray; margin-top: 1%; margin-bottom: 0%" id="mobile-nav" hidden>
+        <div style="width: 100%; color: gray; margin-top: 1%; margin-bottom: 0%" id="mobile-nav" hidden="true">
             <span class="navbarElement" style="margin-left: 3%; font-size: 50px" onclick="openNav()">InAds</span>
             <div id="myNav" class="overlay">
 
