--- a/templates/estimated_earnings.html
+++ b/templates/estimated_earnings.html
@@ -16,7 +16,7 @@
             <a class="navbarElement" href="/docs"><small>Docs</small></a>
             <a class="navbarElement" style="float: right; margin-right: 5%" id="langelement" onclick="InAdsLanguage()">TR</a>
         </div>
-        <div style="width: 100%; color: gray; margin-top: 1%; margin-bottom: 0%" id="mobile-nav" hidden="true">
+        <div style="width: 100%; color: gray; margin-top: 1%; margin-bottom: 0%; display: none" id="mobile-nav">
             <span class="navbarElement" style="margin-left: 3%; font-size: 50px" onclick="openNav()">InAds</span>
             <div id="myNav" class="overlay">
 
@@ -64,8 +64,8 @@
             document.getElementById("websiteFrame").style.width = "100vw"
             document.getElementById("websiteFrame").style.height = "100vh"
 
-            document.getElementById("desktop-nav").hidden = "true"
-            document.getElementById("mobile-nav").hidden = "false"
+            document.getElementById("desktop-nav").style.display = "none"
+            document.getElementById("mobile-nav").style.display = "block"
          }
         function calculate(){
             if(document.getElementById("monthlyvis").value < 10000){
