--- a/templates/docs.html
+++ b/templates/docs.html
@@ -109,7 +109,9 @@
             <a href="/register"><h2>Register</h2></a>
           </div>
 
-        </div>
+
+            </div>
+            <span onclick="openNav()" class="navbarElement" style="float: right; margin-right: 5%; font-size: 50px">&#9776;</span>
         </div>
     <hr style="opacity: .3">
     <div style="margin-left: 5%" id="en">
