--- a/templates/estimated_earnings.html
+++ b/templates/estimated_earnings.html
@@ -30,6 +30,7 @@
           </div>
 
         </div>
+            <span onclick="openNav()" class="navbarElement" style="float: right; margin-right: 5%; font-size: 50px">&#9776;</span>
         </div>
     <div  style="margin-left: 5%; background-color: white; border-radius: 5px; width: 40%; float: left" id="mainFormDiv">
         <div style="margin-left: 5%">
