--- a/templates/estimated_earnings.html
+++ b/templates/estimated_earnings.html
@@ -23,8 +23,8 @@
           <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
           <div class="overlay-content">
+            <a href="/"><h2>Home</h2></a>
             <a href="/docs"><h2>Docs</h2></a>
-            <a href="/estimated_earnings"><h2>Estimated Earnings</h2></a>
             <a href="/login"><h2>Login</h2></a>
             <a href="/register"><h2>Register</h2></a>
           </div>
