--- a/templates/docs.html
+++ b/templates/docs.html
@@ -111,7 +111,7 @@
 
             </div>
             <span onclick="openNav()" class="navbarElement" style="float: right; margin-right: 5%; font-size: 50px">&#9776;</span>
-            <a class="navbarElement" style="float: right; margin-right: 5%" id="langelement" onclick="InAdsLanguage()">TR</a>
+            <a class="navbarElement" style="float: right; margin-right: 5%; font-size: 50px" id="langelement" onclick="InAdsLanguage()">TR</a>
         </div>
     <hr style="opacity: .3">
     <div style="margin-left: 5%" id="en">
