--- a/templates/register.html
+++ b/templates/register.html
@@ -2,41 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>InAds - Register</title>
+    <title>InAds - Login</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/styles">
 </head>
-<body style="font-family: open sans; width: 100%; height: 100%; background: linear-gradient(90deg, white 0%, rgb(0, 200, 220) 60%); padding: 0; margin: 0; outline: 0; border: 0">
+<body style="font-family: open sans; width: 100%; height: 100%; padding: 0; margin: 0; outline: 0; border: 0">
+    <style>
+        .loginButton{
+            background-color: #04AA6D;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+        }
+        .loginInput{
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
+    </style>
 
-    <img style="float: left; margin: 0px; padding: 0px; outline: 0px; border: 0px; height: 250px; width: 250px; margin-top: 30vh; margin-left: 15%" src="/logos/loginBG.png" alt="">
     <div style="margin-top: 0">
-        <form method=post enctype=multipart/form-data style="margin-top: 25vh; background-color: white; width: 30%; float: right; margin-right: 12%; border-radius: 5px; border: none">
-            <div id="form-mail-registration">
-                <br>
-                <input style="margin-left: 5%; margin-right:35%; width: 60%" class="mainForm" type=text name=email placeholder="Email" required>
-                <hr style="margin-left: 5%; margin-right:35%">
-                <input style="margin-left: 5%; margin-right:35%; width: 60%"  class="mainForm" type=password id="passOrigin" name=password placeholder="Password" required>
-                <hr style="margin-left: 5%; margin-right:35%">
-                <input style="margin-left: 5%; margin-right:35%; width: 60%"  class="mainForm" type=password id="passAgain" name=password placeholder="Password Again" required>
-                <hr style="margin-left: 5%; margin-right:35%">
-                <select style="margin-left: 5%;; width: 60%" name="purpose" class="mainForm" id="rgstr" required>
-                    <option value="Advertiser">Your Purpose</option>
-                    <option value="Content Creator">Content Creator</option>
-                    <option value="Advertiser">Advertiser</option>
-                </select>
-                <hr style="margin-left: 5%; margin-right:35%">
-                <br>
-                <input class="buttonGray" style="margin-left: 5%; width: 50%" type="button" onclick="validator()" value="Register">
-                <div style="margin-left: 5%; margin-top: 5%">Already have an account? <a href="/login" class="navbarElement">Login</a></div>
-                <br>
-            </div>
+        <form method=post enctype=multipart/form-data style="margin-top: 15vh; background-color: white; width: 30%; float: right; margin-right: 34%; border-radius: 5px; border: none">
+            <h1>InAds - Register</h1>
+            <br>
+            <span>Email</span>
+            <input style="width: 98%" class="loginInput" type=text name=email required>
+            <br>
+            <span style="margin-top: 5%">Password</span>
+            <br>
+            <input style="width: 98%" class="loginInput" type=password id="passOrigin" name=password required>
+            <br>
+            <span style="margin-top: 5%">Confirm Password</span>
+            <br>
+            <input style="width: 98%" class="loginInput" type=password id="passAgain" name=password required>
+            <br>
+            <span style="margin-top: 5%">Role</span>
+            <br>
+            <select style="width: 98%" class="loginInput" name="purpose" class="mainForm" id="rgstr" required>
+                <option value="Advertiser">Your Purpose</option>
+                <option value="Content Creator">Content Creator</option>
+                <option value="Advertiser">Advertiser</option>
+            </select>
+            <br>
+            <input class="loginButton" type="button" onclick="validator()" value="Register">
+            <div>Already have an account? <a href="/login" class="navbarElement">Login</a></div>
+            <br>
+
         </form>
     </div>
 
     <br>
     <script>
         if(window.innerWidth < window.innerHeight){
-            document.location = "/register/mobile"
+            document.location = "/login/mobile"
         }
     </script>
     <script async id="slcLiveChat" src="https://widget.sonetel.com/SonetelWidget.min.js" data-account-id="207713366"></script>
