--- a/templates/register.html
+++ b/templates/register.html
@@ -30,7 +30,7 @@
     </style>
 
     <div style="margin-top: 0">
-        <form method=post enctype=multipart/form-data style="margin-top: 15vh; background-color: white; width: 30%; float: right; margin-right: 34%; border-radius: 5px; border: none">
+        <form method=post id="form-id" enctype=multipart/form-data style="margin-top: 15vh; background-color: white; width: 30%; float: right; margin-right: 34%; border-radius: 5px; border: none">
             <h1>InAds - Register</h1>
             <br>
             <span>Email</span>
