--- a/templates/estimated_earnings.html
+++ b/templates/estimated_earnings.html
@@ -59,6 +59,7 @@
             <br>
             <input onchange="calculate()" type="text" id="websiteurl" class="loginInput" placeholder="Website URL" style="margin-top: 5%">
             <br>
+            <a href="/register"><button class="loginButton">Start Now!</button></a>
             <h1 style="font-size: 2rem;" id="outcome"></h1>
         </div>
     </div>
