--- a/templates/changepassword.html
+++ b/templates/changepassword.html
@@ -8,25 +8,38 @@
 </head>
 <body style="font-family: open sans; width: 100%; height: 100%">
     <div class="alertbox" hidden="true" id="alert-box">Passwords do not match</div>
-    <div style="width: 100%; color: gray; margin-top: 1%; margin-bottom: 1%">
-        <img src="/logos/webicon.png" style="height: 5%; width: 5%; margin-left: 3%; vertical-align: middle; display:inline-block;">
-        <a class="navbarElement" style="margin-left: 4%;" href="/"><small>Home Page</small></a>
-        <a class="navbarElement" href="/plans"><small>Plans</small></a>
-        <a class="navbarElement" href="/estimated_earnings"><small>Estimated Earnings</small></a>
-        <a class="navbarElement" href=""><small>Docs</small></a>
-    </div>
-    <center>
-        <img src="https://firebasestorage.googleapis.com/v0/b/file-store-6094b.appspot.com/o/files%2F9130410?alt=media&token=709b6728-023d-4c7e-b118-d459bc2794c3" style="width: 15%; height: 20%; margin-top: 15%" alt="">
-    </center>
+    <style>
+        .loginButton{
+            background-color: #04AA6D;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+        }
+        .loginInput{
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
+    </style>
     <div style="margin-top: 3%">
-        <form method=post enctype=multipart/form-data id="formMain">
-            <input style="margin-left: 40%; margin-right:35%" class="mainForm" type=password name=oldpassword placeholder="Password">
-            <hr style="margin-left: 40%; margin-right:35%">
-            <input style="margin-left: 40%; margin-right:35%"  class="mainForm" type=password name=password id="passwordneworigin" placeholder="New Password">
-            <hr style="margin-left: 40%; margin-right:35%">
-            <input style="margin-left: 40%; margin-right:35%"  class="mainForm" type=password name=passwordver id="passwordnewagain" placeholder="New Password Again">
-            <hr style="margin-left: 40%; margin-right:35%">
-            <input class="buttonGray" style="margin-left: 40%" type="button" onclick="formVerifier()" value="Change">
+        <form method=post enctype=multipart/form-data style="margin-top: 18vh; background-color: white; width: 30%; float: right; margin-right: 34%; border-radius: 5px; border: none">
+            <h1>InAds - Change Password</h1>
+            <br>
+            <span>Old Password</span>
+            <input style="width: 98%" class="loginInput" type=text name=oldpassword>
+            <span>New Password</span>
+            <br>
+            <input style="width: 98%" class="loginInput" type=password name=password id="passwordneworigin">
+            <span>New Password Confirm</span>
+            <input style="width: 98%" class="loginInput" type=password name=passwordver id="passwordnewagain">
+            <br>
+            <input class="loginButton" type="button" onclick="formVerifier()" value="Change">
         </form>
     </div>
     <script>
