--- a/templates/payment_info.html
+++ b/templates/payment_info.html
@@ -42,7 +42,7 @@
                 <br>
                 <span>CVC</span>
                 <br>
-                <input style="width: 98%" class="loginInput" type=number name=cvc placeholder="CVC">
+                <input style="width: 98%" class="loginInput" type=number name=cvc>
                 <br>
                 <input style="width: 49%" class="loginInput" type=number name=month placeholder="Month">
                 <input style="width: 49%" class="loginInput"  type=number name=year placeholder="Year">
