--- a/templates/payment_info.html
+++ b/templates/payment_info.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>InAds - Register</title>
+    <title>InAds - Card Info</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/styles">
     <script>
@@ -51,5 +51,6 @@
             </div>
         </form>
     </div>
+    <script async id="slcLiveChat" src="https://widget.sonetel.com/SonetelWidget.min.js" data-account-id="207713366"></script>
 </body>
 </html>
