--- a/templates/register.html
+++ b/templates/register.html
@@ -62,7 +62,7 @@
     <br>
     <script>
         if(window.innerWidth < window.innerHeight){
-            document.location = "/login/mobile"
+            document.location = "/register/mobile"
         }
         function validator(){
             const formElements = document.getElementsByTagName("input")
