--- a/templates/index.html
+++ b/templates/index.html
@@ -108,18 +108,18 @@
         Other Networks <div class="bar bar2">0.2 USD</div>
     </div>
     <div id="infoDiv" style="margin-left: 100px; margin-top: 4%;">
-        <center style="width: 250px; box-shadow: 0px 0px 0px 3px rgba(0,0,0,0.3); border-radius: 3px; float: left; margin-left: 120px; margin-top: 25px">
+        <center style="width: 250px; box-shadow: 0px 0px 0px 3px rgba(220,120,0, 1); border-radius: 8px; float: left; margin-left: 120px; margin-top: 25px">
             <h2 style="margin-top: 5%;">Cheapest possible</h2>
             <h3 style="opacity: 0.5;">Our no commission policy allows us to offer the cheapest price in the market to our customers.</h3>
             <a href="/plans"><button style="background-color: gray; color: white; border-radius: 3px; width: 40%; height: 20px; padding: 0; border: none; margin-bottom: 5%; opacity: 0.7; margin-top: 25%">Learn More</button></a>
         </center>
-        <center style="width: 250px; box-shadow: 0px 0px 0px 3px rgba(0,0,0,0.3); border-radius: 3px; float: left; margin-left: 120px; margin-top: 25px">
+        <center style="width: 250px; box-shadow: 0px 0px 0px 3px rgba(220,120,0, 1); border-radius: 8px; float: left; margin-left: 120px; margin-top: 25px">
             <h2 style="margin-top: 5%">Targeted ads</h2>
             <h3 style="opacity: 0.5;">Our powerful network enables our advertisers to advertise directly to their target audience.
                 Through picking keywords and interests.</h3>
             <a href="/register"><button style="background-color: gray; color: white; border-radius: 3px; width: 40%; height: 20px; padding: 0; border: none; margin-bottom: 5%; opacity: 0.7; margin-top: 5%">Learn More</button></a>
         </center>
-        <center style="width: 250px; box-shadow: 0px 0px 0px 3px rgba(0,0,0,0.3); border-radius: 3px; float: left; margin-left: 120px; margin-top: 25px">
+        <center style="width: 250px; box-shadow: 0px 0px 0px 3px rgba(220,120,0, 1); border-radius: 8px; float: left; margin-left: 120px; margin-top: 25px">
             <h2 style="margin-top: 5%">You control your content</h2>
             <h3 style="opacity: 0.5;">You can customise the shape and place of the ads on your website and receive feedback on your advertised content.</h3>
             <a href="/register"><button style="background-color: gray; color: white; border-radius: 3px; width: 40%; height: 20px; padding: 0; border: none; margin-bottom: 5%; opacity: 0.7">Learn More</button></a>
