--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -184,10 +184,23 @@
         <button style="margin-top: 5%; margin-bottom: 5%" class="buttonBlue" onclick="document.location = '/register'">Start Now</button>
     </center>
     <br>
-    <center style="background-color: rgb(50, 50, 50); color: gray">
-        <strong>2021, InGames, Inc. New Castle, Delaware</strong>
-        <a style="margin-left: 20%" class="navbarElement" href="mailto: contact@inadsglobal.com">Contact</a>
-    </center>
+    <div style="background-color: rgb(0, 50, 50); color: white">
+        <br>
+        <a href="/corporate" style="text-decoration: none; color: white; margin-left: 5%"><strong>About Us</strong></a>
+        <br>
+        <hr style="margin-top: 3%; margin-right: 50%; margin-left: 5%">
+        <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
+        <!-- End TrustBox script -->
+                <!-- TrustBox widget - Micro Review Count -->
+        <div class="trustpilot-widget" data-locale="en-US" data-template-id="5419b6a8b0d04a076446a9ad" data-businessunit-id="60ba88c1f86baa0001ba7d75" data-style-height="24px" data-style-width="100%" style="float: right;" data-theme="dark">
+          <a href="https://www.trustpilot.com/review/inadsglobal.com" target="_blank" rel="noopener">Trustpilot</a>
+        </div>
+        <!-- End TrustBox widget -->
+        <div style="margin-left: 5%; margin-top: 3%">651 N Broad St, Suite 206, Middletown, 19709, New Castle, Delaware</div>
+        <br>
+        <div style="margin-left: 5%">&copy; InGames, Inc. 2021</div>
+        <br>
+    </div>
 
     <script>
         if(window.innerWidth < window.innerHeight){
