--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -175,7 +175,7 @@
             However, InAds has your back its unique ad insertion policy makes it impossible for ad blockers to detect ads and thus makes ads impossible to block.
         </p>
         <br>
-        <img style="float: right; margin-left: 5%; margin-top: 15%; clear: both; margin-right: 5%;" src="/logos/webexample.png" alt="">
+        <img style="float: right; margin-left: 5%; margin-top: 15%; clear: both; margin-right: 5%; width: 250px; height: 250px" src="/logos/webexample.png" alt="">
         <h1 style="margin-top: 20%; margin-left: 2%">Number of ads matter</h1>
         <p style="margin-right: 10%; margin-left: 10%;">Unlike other ad networks' "A page view is what is counted in your reports every time a user views a page displaying ads. We will count one page view regardless of the number of ads displayed on that page." policy your website generates income for every single ad on your web page.</p>
     </div>
