--- a/templates/index.html
+++ b/templates/index.html
@@ -99,7 +99,7 @@
             <a class="navbarElement" style="float:right; margin-right: 2%;" href="/login">Login</a>
         </div>
         <hr style="opacity: 0">
-        <img id="titleimage" src="/logos/title.png" alt=""  style="height: 95vh; width: 100%">
+        <img id="titleimage" src="/logos/title.png" alt=""  style="width: 100%">
         <br>
     </div>
     <div class="graph-cont">
