--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -108,7 +108,7 @@
 
         </div>
         <hr style="opacity: 0">
-        <img id="titleimage" src="/logos/title.png" alt=""  style="height: 95vh; width: 100%">
+        <img id="titleimage" src="/logos/title.png" alt=""  style="width: 100%">
         <br>
     </div>
     <div class="graph-cont">
