--- a/templates/index.html
+++ b/templates/index.html
@@ -99,7 +99,9 @@
             <a class="navbarElement" style="float:right; margin-right: 2%;" href="/login">Login</a>
         </div>
         <hr style="opacity: 0">
-        <img id="titleimage" src="/logos/title.png" alt=""  style="width: 100%">
+        <div style="width: 100%; height: 95vh">
+            <img id="titleimage" src="/logos/title.png" alt="" style="object-fit: cover">
+        </div>
         <br>
     </div>
     <div class="graph-cont">
