--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -108,7 +108,9 @@
 
         </div>
         <hr style="opacity: 0">
-        <img id="titleimage" src="/logos/title.png" alt=""  style="width: 100%">
+        <div style="width: 100%; height: 95vh">
+            <img id="titleimage" src="/logos/title.png" alt=""  style="object-fit: cover">
+        </div>
         <br>
     </div>
     <div class="graph-cont">
