--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -108,9 +108,7 @@
 
         </div>
         <hr style="opacity: 0">
-        <div style="width: 100%; height: 95vh">
-            <img id="titleimage" src="/logos/title.png" alt=""  style="object-fit: cover">
-        </div>
+        <img id="titleimage" src="/logos/title.png" alt=""  style="width: 100%">
         <br>
     </div>
     <div class="graph-cont">
